@@ -84,6 +84,7 @@ void XYFitCurve::initStartValues(XYFitCurve::FitData& fitData, const XYCurve* cu
 	Q_D(XYFitCurve);
 	const Column* xColumn = dynamic_cast<const Column*>(d->xDataColumn);
 	const Column* yColumn = dynamic_cast<const Column*>(d->yDataColumn);
+	const Column* yErrorColumn = dynamic_cast<const Column*>(d->yErrorColumn);
 
 	if (!xColumn || !yColumn) {
 		DEBUG(Q_FUNC_INFO << ", data columns not available");
@@ -111,7 +112,13 @@ void XYFitCurve::initStartValues(XYFitCurve::FitData& fitData, const XYCurve* cu
 	DEBUG(Q_FUNC_INFO << ", x min/max = " << xmin << ' ' << xmax);
 	// DEBUG(Q_FUNC_INFO <<", y min/max = " << ymin << ' ' << ymax);
 
-	const size_t n = qMin(xColumn->rowCount(), yColumn->rowCount());
+	const int n = qMin(xColumn->rowCount(), yColumn->rowCount());
+
+	if (yErrorColumn && yErrorColumn->rowCount() < n) {
+		d->fitResult.available = true;
+		d->fitResult.status = i18n("Not sufficient weight data points provided.");
+		return;
+	}
 	// guess start values of parameter
 	switch (modelCategory) {
 	case nsl_fit_model_basic:
@@ -125,14 +132,37 @@ void XYFitCurve::initStartValues(XYFitCurve::FitData& fitData, const XYCurve* cu
 			gsl_vector* c = gsl_vector_alloc(np); // best fit parameter (p+1)
 			gsl_matrix* cov = gsl_matrix_alloc(np, np);
 
-			for (size_t i = 0; i < n; i++) {
+			const double minError = 1.e-199; // minimum error for weighting
+			for (int i = 0; i < n; i++) {
 				double xi = xColumn->valueAt(i);
 				double yi = yColumn->valueAt(i);
 
 				for (int j = 0; j < np; j++)
 					gsl_matrix_set(X, i, j, gsl_pow_int(xi, j));
 				gsl_vector_set(y, i, yi);
-				gsl_vector_set(w, i, 1.); // TODO: use weights when available
+
+				switch (fitData.yWeightsType) {
+				case nsl_fit_weight_no:
+				case nsl_fit_weight_statistical_fit:
+				case nsl_fit_weight_relative_fit:
+					gsl_vector_set(w, i, 1.);
+					break;
+				case nsl_fit_weight_instrumental: // yerror are sigmas
+					gsl_vector_set(w, i, 1. / gsl_pow_2(qMax(yErrorColumn->valueAt(i), qMax(sqrt(minError), std::abs(yi) * 1.e-15))));
+					break;
+				case nsl_fit_weight_direct: // yerror are weights
+					gsl_vector_set(w, i, yErrorColumn->valueAt(i));
+					break;
+				case nsl_fit_weight_inverse: // yerror are inverse weights
+					gsl_vector_set(w, i, 1. / qMax(yErrorColumn->valueAt(i), qMax(minError, std::abs(yi) * 1.e-15)));
+					break;
+				case nsl_fit_weight_statistical:
+					gsl_vector_set(w, i, 1. / qMax(yi, minError));
+					break;
+				case nsl_fit_weight_relative:
+					gsl_vector_set(w, i, 1. / qMax(gsl_pow_2(yi), minError));
+					break;
+				}
 			}
 
 			auto* work = gsl_multifit_linear_alloc(n, np);
@@ -207,7 +237,7 @@ void XYFitCurve::initStartValues(XYFitCurve::FitData& fitData, const XYCurve* cu
 			gsl_matrix_free(cov);
 			break;
 		}
-		// TODO: handle all basic models
+		// TODO: use regression for all basic models
 		case nsl_fit_model_power: // a x^b, a + b x^c
 		case nsl_fit_model_exponential: // a e^(bx), a1 e^(b1 x) + a2 e^(b2 x), ...
 		case nsl_fit_model_inverse_exponential: // a (1-e^(bx)) + c
@@ -1804,15 +1834,13 @@ void XYFitCurvePrivate::recalculate() {
 		return;
 	}
 
-	if (yErrorColumn) {
-		if (yErrorColumn->rowCount() < tmpXDataColumn->rowCount()) {
-			fitResult.available = true;
-			fitResult.valid = false;
-			fitResult.status = i18n("Not sufficient weight data points provided.");
-			Q_EMIT q->dataChanged();
-			sourceDataChangedSinceLastRecalc = false;
-			return;
-		}
+	if (yErrorColumn && yErrorColumn->rowCount() < tmpXDataColumn->rowCount()) {
+		fitResult.available = true;
+		fitResult.valid = false;
+		fitResult.status = i18n("Not sufficient weight data points provided.");
+		Q_EMIT q->dataChanged();
+		sourceDataChangedSinceLastRecalc = false;
+		return;
 	}
 
 	// copy all valid data point for the fit to temporary vectors
@@ -1950,7 +1978,7 @@ void XYFitCurvePrivate::recalculate() {
 	case nsl_fit_weight_instrumental: // yerror are sigmas
 		for (int i = 0; i < (int)n; i++)
 			if (i < yerrorVector.size())
-				weight[i] = 1. / gsl_pow_2(qMax(yerror[i], qMax(sqrt(minError), fabs(ydata[i]) * 1.e-15)));
+				weight[i] = 1. / gsl_pow_2(qMax(yerror[i], qMax(sqrt(minError), std::abs(ydata[i]) * 1.e-15)));
 		break;
 	case nsl_fit_weight_direct: // yerror are weights
 		for (int i = 0; i < (int)n; i++)
@@ -1960,7 +1988,7 @@ void XYFitCurvePrivate::recalculate() {
 	case nsl_fit_weight_inverse: // yerror are inverse weights
 		for (int i = 0; i < (int)n; i++)
 			if (i < yerrorVector.size())
-				weight[i] = 1. / qMax(yerror[i], qMax(minError, fabs(ydata[i]) * 1.e-15));
+				weight[i] = 1. / qMax(yerror[i], qMax(minError, std::abs(ydata[i]) * 1.e-15));
 		break;
 	case nsl_fit_weight_statistical:
 		for (int i = 0; i < (int)n; i++)
